syntax = "proto3";

package user_service;

import "user_service/user.proto";

option go_package = "grpc/v1/user_service";

message SignupRequest {
    string username = 1;
    string email = 2;
    string password = 3;
}

message SignupResponse {
    User user = 1;
}
